--- a/src/chirp_ui/templates/chirpui/progress.html
+++ b/src/chirp_ui/templates/chirpui/progress.html
@@ -8,6 +8,7 @@
         progress_bar(value=60, max=100, label="60%")
         progress_bar(value=3, max=5, variant="radiant", label="3 of 5 tasks")
         progress_bar(value=75, max=100, variant="success")
+        progress_bar(value=45, max=100, variant="watched")  # video watched progress (red)
 -#}
 
 {% def progress_bar(value, max=100, label=none, variant="gold", size="md", cls="") %}
